K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
  namespace: production
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
